resources-manifests/movie-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: movie
  labels:
    app: movie
spec:
  containers:
    - image: phillippko/movie
      name: movie
      ports:
        - containerPort: 9000
