resources-manifests/movie-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-node-port
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: movie
