resources-manifests/movie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: movie
